# clipllm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  TODO.md  refactor.md  update-translations.sh
.claude/commands/: validate.md
.claude/skills/: validate.md
ai-reader/: ai-reader.py
art/: clipai_hires.xcf  clipllm_hires.xcf
cmake/: windows-x86_64-mingw.cmake
docs/: index.html  index.html.in
installer/: clipai.nsi  clipllm.nsi
installer/config/: config.xml
plans/: flathub.md
resources/: clipai.desktop.in  clipai.exe.manifest  clipai.rc.in  clipllm.desktop.in  clipllm.exe.manifest  clipllm.rc.in  resources.qrc
resources/config/: prompts-default.json
scripts/: build-appimage.sh  build-installer.sh  deploy-windows.sh
src/: main.cpp
src/core/: app.cpp  app.h  clipboardmanager.cpp  clipboardmanager.h  configmanager.cpp  configmanager.h  crashhandler.cpp  crashhandler.h  debuglogger.cpp  debuglogger.h  groupsmanager.cpp  groupsmanager.h  historymanager.cpp  historymanager.h  ipcserver.cpp  ipcserver.h  keychainstore.cpp  keychainstore.h  llmclient.cpp  llmclient.h  promptmanager.cpp  promptmanager.h  providerkeystore.cpp  providerkeystore.h  screenshotmanager.cpp  screenshotmanager.h  version.h.in
src/models/: llmconfig.cpp  llmconfig.h  prompt.cpp  prompt.h  providerprofile.cpp  providerprofile.h
src/ui/: groupsdialog.cpp  groupsdialog.h  historydialog.cpp  historydialog.h  hotkeyedit.cpp  hotkeyedit.h  imageviewdialog.cpp  imageviewdialog.h  promptconfirmdialog.cpp  promptconfirmdialog.h  prompteditordialog.cpp  prompteditordialog.h  promptmenu.cpp  promptmenu.h  promptpreviewdialog.cpp  promptpreviewdialog.h  resultdialog.cpp  resultdialog.h  rubytextobject.cpp  rubytextobject.h  rubyutils.cpp  rubyutils.h  screenshotselector.cpp  screenshotselector.h  settingsdialog.cpp  settingsdialog.h  trayicon.cpp  trayicon.h  uiutils.h
tests/: CMakeLists.txt  tst_configmanager.cpp  tst_historymanager.cpp
translations/: CMakeLists.txt  clipai_de.qm  clipai_de.ts  clipai_en.qm  clipai_en.ts  clipai_es.qm  clipai_es.ts  clipai_fr.qm  clipai_fr.ts  clipai_ru.qm  clipai_ru.ts  clipllm_de.ts  clipllm_en.ts  clipllm_es.ts  clipllm_fr.ts  clipllm_ja.ts  clipllm_ru.ts
